--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -9,7 +9,7 @@ check_PROGRAMS = \
 	libpldm_bios_test \
 	libpldmresponder_bios_test \
 	libpldmresponder_pdr_state_effecter_test \
-	libpldmresponder_bios_table_test
+	libpldmresponder_platform_test
 
 if OEM_IBM
 check_PROGRAMS += \
@@ -138,23 +138,18 @@ libpldmresponder_pdr_state_effecter_test_LDADD = \
 	-lstdc++fs
 libpldmresponder_pdr_state_effecter_test_SOURCES = libpldmresponder_pdr_state_effecter_test.cpp
 
-libpldmresponder_bios_table_test_CPPFLAGS = $(test_cppflags)
-libpldmresponder_bios_table_test_CXXFLAGS = $(test_cxxflags)
-libpldmresponder_bios_table_test_LDFLAGS = \
-	$(test_ldflags) \
-	$(SDBUSPLUS_LIBS)
-libpldmresponder_bios_table_test_LDADD = \
-	$(top_builddir)/libpldmresponder/libpldmresponder_la-bios.o \
-	$(top_builddir)/libpldmresponder/libpldmresponder_la-bios_table.o \
-	$(top_builddir)/libpldmresponder/libpldmresponder_la-utils.o \
-	$(top_builddir)/libpldm/libpldm_la-base.o  \
-	$(top_builddir)/libpldm/libpldm_la-bios.o \
-	$(top_builddir)/libpldmresponder/libpldmresponder_la-bios_parser.o \
-	$(top_builddir)/pldmd-registration.o \
-	$(CODE_COVERAGE_LIBS) \
-	$(SDBUSPLUS_LIBS) \
+libpldmresponder_platform_test_CPPFLAGS = $(test_cppflags)
+libpldmresponder_platform_test_CXXFLAGS = $(test_cxxflags)
+libpldmresponder_platform_test_LDFLAGS = $(test_ldflags)
+libpldmresponder_platform_test_LDADD = \
+        $(top_builddir)/libpldm/libpldm_la-base.o \
+        $(top_builddir)/libpldm/libpldm_la-platform.o \
+        $(top_builddir)/libpldmresponder/libpldmresponder_la-pdr.o \
+        $(top_builddir)/libpldmresponder/libpldmresponder_la-effecters.o \
+        $(top_builddir)/libpldmresponder/libpldmresponder_la-platform.o \
 	$(PHOSPHOR_LOGGING_LIBS) \
 	$(PHOSPHOR_DBUS_INTERFACES_LIBS) \
+	$(SDBUSPLUS_LIBS) \
+	$(CODE_COVERAGE_LIBS) \
 	-lstdc++fs
-libpldmresponder_bios_table_test_SOURCES = \
-        libpldmresponder_bios_table_test.cpp
+libpldmresponder_platform_test_SOURCES = libpldmresponder_platform_test.cpp
