libpldmresponder: implement handler for GetPDR
This commit implements the GetPDR command as defined in DSP0248 v1.1.1.
Multipart PDR transfers are still not implemented.

Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: Ic520a914e8228b723521151f4ba1eed947179047

--- a/libpldmresponder/Makefile.am
+++ b/libpldmresponder/Makefile.am
@@ -6,9 +6,7 @@ libpldmresponder_la_SOURCES = \
 	bios_table.cpp \
 	effecters.cpp \
 	pdr.cpp \
-	bios_parser.cpp \
-	bios.cpp
-
+	platform.cpp
 libpldmresponder_la_LIBADD = \
 	../libpldm/libpldm.la \
 	$(CODE_COVERAGE_LIBS)
