--- a/Makefile.am
+++ b/Makefile.am
@@ -28,3 +28,14 @@ else
 endif
 
 SUBDIRS = libpldm libpldmresponder test
+
+sbin_PROGRAMS = pldmd
+pldmd_SOURCES = \
+    pldmd.cpp \
+    registration.cpp
+pldmd_LDADD = libpldmresponder/libpldmresponder.la
+pldmd_LDFLAGS = $(SYSTEMD_LIBS)
+pldmd_CXXFLAGS = $(SYSTEMD_CXXFLAGS)
+
+ACLOCAL_AMFLAGS = -I m4
+
