Implement the PLDM Daemon. Implement command handler registration
PLDM daemon is implemented as a daemon which receives and send the response.
PLDM messages received by the PLDM daemon from the MCTP daemon are routed
to the respective command handler to create a response. This response will
be send back by the PLDM daemon to the requester.

PLDM daemon and MCTP daemon interact with each other using UNIX domain sockets.

Implemented a way for the PLDM responder library to register handlers for
specific PLDM commands. This is as per the registration scheme
documented in README.md.

Support for enabling verbose in the PLDM Demon (tracing the receive and
response message packets) are conditionally compiled.You would need to
provide the --enable-pldmdverbose flag to configure to enable it.

Change-Id: I22cfd85103bce167239219fbcc59c25b09528211
Signed-off-by: Jinu Joy Thomas <jinu.joy.thomas@in.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,3 +28,18 @@ else
 endif
 
 SUBDIRS = libpldm libpldmresponder test
+
+sbin_PROGRAMS = pldmd
+pldmd_SOURCES = \
+    pldmd.cpp \
+    registration.cpp
+pldmd_LDADD = libpldmresponder/libpldmresponder.la
+pldmd_LDFLAGS = \
+        $(SYSTEMD_LIBS) \
+        $(SDBUSPLUS_LIBS)
+pldmd_CXXFLAGS =  \
+        $(SYSTEMD_CXXFLAGS) \
+        $(SDBUSPLUS_CFLAGS)
+
+ACLOCAL_AMFLAGS = -I m4
+
