Allow openbmc/pldm
Signed-off-by: Jinu Joy Thomas <jinu.joy.thomas@in.ibm.com>
Change-Id: I86254361439a94757d16b14a8afd479fd275d8ce

--- a/project.config
+++ b/project.config
@@ -17,3 +17,5 @@
 	createSignedTag = group github/openbmc/pldm-maintainers
 [submit]
 	action = rebase if necessary
+[allowSuperproject "openbmc/pldm"]
+        matching = refs/heads/*:refs/heads/*
