--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -26,14 +26,18 @@ test_cxxflags = \
 	$(PTHREAD_CFLAGS) \
 	$(PHOSPHOR_LOGGING_CFLAGS) \
 	$(SDBUSPLUS_CFLAGS) \
-	$(CODE_COVERAGE_CXXFLAGS)
+	$(CODE_COVERAGE_CXXFLAGS) \
+	$(PHOSPHOR_DBUS_INTERFACES_CFLAGS)
 
 test_ldflags = \
 	-lgtest_main \
 	-lgtest \
+	-lgmock \
+	-lstdc++fs \
 	$(PTHREAD_LIBS) \
 	$(SDBUSPLUS_LIBS) \
 	$(PHOSPHOR_LOGGING_LIBS) \
+	$(PHOSPHOR_DBUS_INTERFACES_LIBS) \
 	$(OESDK_TESTCASE_FLAGS)
 
 if OEM_IBM
@@ -134,10 +138,11 @@ libpldmresponder_pdr_state_effecter_test_SOURCES = libpldmresponder_pdr_state_ef
 
 libpldmresponder_platform_test_CPPFLAGS = $(test_cppflags)
 libpldmresponder_platform_test_CXXFLAGS = $(test_cxxflags)
-libpldmresponder_platform_test_LDFLAGS = $(test_ldflags)
+libpldmresponder_platform_test_LDFLAGS = $(test_ldflags) $(SDBUSPLUS_LIBS)
 libpldmresponder_platform_test_LDADD = \
         $(top_builddir)/libpldm/libpldm_la-base.o \
         $(top_builddir)/libpldm/libpldm_la-platform.o \
+		$(top_builddir)/libpldmresponder/libpldmresponder_la-utils.o \
         $(top_builddir)/libpldmresponder/libpldmresponder_la-pdr.o \
         $(top_builddir)/libpldmresponder/libpldmresponder_la-effecters.o \
         $(top_builddir)/libpldmresponder/libpldmresponder_la-platform.o \
