libpldmresponder: implement setStateEffecterStates
This commit implements the handler for setStateEffecterStates response.
Apart from that it actually sets the effecter for PLDM_BOOT_PROGRESS
state. This is used when host sends setStateEffecterStates to mark
any change in hypervisor state. The currently supported states are
"StandBy" and "BootComplete" as per
xyz.openbmc_project.State.OperatingSystem.Status

The testcase will be pushed in a followup commit

Change-Id: I205627b2b8a796a0dd4a200ac3d59c1d19d71f01
Signed-off-by: Sampa Misra <sampmisr@in.ibm.com>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -162,10 +162,11 @@ libpldmresponder_bios_table_test_SOURCES = \
 
 libpldmresponder_platform_test_CPPFLAGS = $(test_cppflags)
 libpldmresponder_platform_test_CXXFLAGS = $(test_cxxflags)
-libpldmresponder_platform_test_LDFLAGS = $(test_ldflags)
+libpldmresponder_platform_test_LDFLAGS = $(test_ldflags) $(SDBUSPLUS_LIBS)
 libpldmresponder_platform_test_LDADD = \
         $(top_builddir)/libpldm/libpldm_la-base.o \
         $(top_builddir)/libpldm/libpldm_la-platform.o \
+		$(top_builddir)/libpldmresponder/libpldmresponder_la-utils.o \
         $(top_builddir)/libpldmresponder/libpldmresponder_la-pdr.o \
         $(top_builddir)/libpldmresponder/libpldmresponder_la-effecters.o \
         $(top_builddir)/libpldmresponder/libpldmresponder_la-platform.o \
