PLDMTOOL : Implement the pldm tool.
Tested following PLDM commands:
    1) GetPLDMTypes
    2) GetPLDMVersion

Tested : Verified the RAW data response.

pldmtool -c GetPLDMTypes
DEBUG:  Success in creating the socket : RC = [0]
DEBUG:  Success in connecting to the socket : RC = [0]
DEBUG:  Success in sending message type as pldm to mctp : RC = [0]
DEBUG:  MCTP initialization Success : RC = [3]
DEBUG:  Encoded request succesfully : RC = [0]
INFO:  Request Message:
INFO:  08 01 9b 00 04 00 00
DEBUG:  Write to socket successful : RC = [7]
INFO:  Total length [7]
Loopback response message:
INFO:  08 01 9b 00 04 00 00
INFO:  Entity ID = 8
INFO:  PLDM Type = 1
DEBUG:  On first recv(), responseMsg == requestMsg
INFO:  Total length [14]
INFO:  Socket recv() successful.
Response Message:
INFO:  08 01 00 00 04 00 01 00 00 00 00 00 00 00
DEBUG:  Shutdown Socket successful, RC=0

pldmtool -c GetPLDMVersion
DEBUG:  Success in creating the socket : RC = [0]
DEBUG:  Success in connecting to the socket : RC = [0]
DEBUG:  Success in sending message type as pldm to mctp : RC = [0]
DEBUG:  MCTP initialization Success : RC = [3]
DEBUG:  Encoded request succesfully : RC = [0]
INFO:  Request Message:
INFO:  08 01 9b 00 03 00 00 00 00 01 00
DEBUG:  Write to socket successful : RC = [11]
INFO:  Total length [11]
Loopback response message:
INFO:  08 01 9b 00 03 00 00 00 00 01 00
INFO:  Entity ID = 8
INFO:  PLDM Type = 1
DEBUG:  On first recv(), responseMsg == requestMsg
INFO:  Total length [15]
INFO:  Socket recv() successful.
Response Message:
INFO:  08 01 00 00 03 00 00 00 00 00 05 f1 f0 f0 00
DEBUG:  Shutdown Socket successful, RC=0

Signed-off-by: Lakshminarayana R. Kammath <lkammath@in.ibm.com>
Change-Id: I758b5f5cf03ad9b91ce47144fe46cd79b41381f3

--- a/Makefile.am
+++ b/Makefile.am
@@ -29,6 +29,10 @@ endif
 
 SUBDIRS = libpldm libpldmresponder test
 
+if PLDMTOOL
+SUBDIRS += tool
+endif
+
 sbin_PROGRAMS = pldmd
 pldmd_SOURCES = \
     pldmd.cpp \
