PLDMTOOL : Implement a PLDM requester tool.
Implemented a way for sending PLDM requests for specific PLDM commands.
This tool will interact with MCTP daemon using UNIX domain socket, The
response got from socket will be displayed on the console in raw format.

Tested following PLDM commands:
    1) GetPLDMTypes
    2) GetPLDMVersion

Tested : Verified the RAW response data.

./pldmtool -c GetPLDMTypes
Encoded request succesfully : RC = 0
Request Message:
08 01 9b 00 04 00 00
Success in creating the socket : RC = 3
Success in connecting to socket : RC = 0
Success in sending message type as pldm to mctp : RC = 0
Write to socket successful : RC = 7
Total length:7
Loopback response message:
08 01 9b 00 04 00 00
On first recv(),response == request : RC = 0
Total length: 14
Shutdown Socket successful :  RC = 0
Socket recv() successful : RC = 0
Response Message :
08 01 00 00 04 00 01 00 00 00 00 00 00 00

./pldmtool -c GetPLDMVersion base
PLDM Type requested : base
Encoded request succesfully : RC = 0
Request Message:
08 01 9b 00 03 00 00 00 00 01 00
Success in creating the socket : RC = 3
Success in connecting to socket : RC = 0
Success in sending message type as pldm to mctp : RC = 0
Write to socket successful : RC = 11
Total length:11
Loopback response message:
08 01 9b 00 03 00 00 00 00 01 00
On first recv(),response == request : RC = 0
Total length: 15
Shutdown Socket successful :  RC = 0
Socket recv() successful : RC = 0
Response Message:
08 01 00 00 03 00 00 00 00 00 05 f1 f0 f0 00

./pldmtool -h
PLDM requester tool for OpenBMC
Usage: ./pldmtool [OPTIONS] —command...

Positionals:
  —command TEXT ... REQUIRED
                              PLDM request command

Options:
  -h,--help                   Print this help message and exit
  -c TEXT ... REQUIRED        PLDM request command
[Option Group: SUB COMMAND]
  Specify sub command to use
  Positionals:
    BASE | BIOS | OEM TEXT      PLDM Command Type
[Option Group: PLDM request command]
  Specify PLDM command to tes

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,7 @@ else
 @CODE_COVERAGE_RULES@
 endif
 
-SUBDIRS = libpldm libpldmresponder test
+SUBDIRS = libpldm libpldmresponder test tool
 
 sbin_PROGRAMS = pldmd
 pldmd_SOURCES = \
