Initial version of pldmtool checkin
Tested : GetPLDMTypes response tested

Signed-off-by: Lakshminarayana R. Kammath <lkammath@in.ibm.com>
Change-Id: I758b5f5cf03ad9b91ce47144fe46cd79b41381f3

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,4 +27,10 @@ else
 @CODE_COVERAGE_RULES@
 endif
 
-SUBDIRS = libpldm libpldmresponder test
+SUBDIRS = libpldm libpldmresponder test tool
+
+if PLDMTOOL
+SUBDIRS += tool
+endif
+     
+
