--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -113,7 +113,8 @@ libpldmoemresponder_fileio_test_LDADD = \
         $(top_builddir)/pldmd-registration.o \
 	$(top_builddir)/libpldm/libpldm_la-base.o \
 	$(top_builddir)/oem/ibm/libpldm/libpldm_la-file_io.o \
-	$(top_builddir)/oem/ibm/libpldmresponder/libpldmresponder_la-file_io.o
+	$(top_builddir)/oem/ibm/libpldmresponder/libpldmresponder_la-file_io.o\
+	$(top_builddir)/oem/ibm/libpldmresponder/libpldmresponder_la-file_table.o
 libpldmoemresponder_fileio_test_SOURCES = $(top_builddir)/oem/ibm/test/libpldmresponder_fileio_test.cpp
 endif
 
