Fix build errors with bitbake
8b97665 has build fails with a pldm bitbake recipe. The fix was mostly
about using top_srcdir instead of top_builddir.

Change-Id: Ic3ef0e01997921174d28ae10e66e7bdd17c52af8
Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -43,7 +43,8 @@ pldmd_CXXFLAGS = -I$(top_builddir)/libpldm \
 
 if OEM_IBM
 pldmd_CXXFLAGS += \
-        -I$(top_builddir)/oem/ibm/
+	-I$(top_srcdir)/oem/ibm/ \
+	-I$(top_srcdir)/libpldm
 endif
 
 ACLOCAL_AMFLAGS = -I m4
