--- a/libpldm/Makefile.am
+++ b/libpldm/Makefile.am
@@ -13,16 +13,17 @@ libpldm_la_SOURCES = \
 	platform.c \
 	bios.c
 
+libpldm_la_LDFLAGS = -version-info 1:0:0 -shared
+libpldm_la_CFLAGS = $(CODE_COVERAGE_CFLAGS)
+libpldm_la_LIBADD = $(CODE_COVERAGE_LIBS)
+
 if OEM_IBM
 libpldm_include_HEADERS += \
         $(top_builddir)/oem/ibm/libpldm/file_io.h
 libpldm_la_SOURCES += \
         $(top_builddir)/oem/ibm/libpldm/file_io.c
+libpldm_la_CFLAGS += -I$(top_srcdir)/libpldm
 endif
-
-libpldm_la_LDFLAGS = -version-info 1:0:0 -shared
-libpldm_la_CFLAGS = $(CODE_COVERAGE_CFLAGS)
-libpldm_la_LIBADD = $(CODE_COVERAGE_LIBS)
 
 pkgconfiglibdir = ${libdir}/pkgconfig
 pkgconfiglib_DATA = libpldm.pc
