--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -72,14 +72,16 @@ libpldmresponder_bios_test_CPPFLAGS = $(test_cppflags)
 libpldmresponder_bios_test_CXXFLAGS = $(test_cxxflags)
 libpldmresponder_bios_test_LDFLAGS = \
 	$(test_ldflags) \
-	$(SDBUSPLUS_LIBS)
+	$(SDBUSPLUS_LIBS) \
+	-lstdc++fs
 libpldmresponder_bios_test_LDADD = \
 	$(top_builddir)/pldmd-registration.o \
 	$(top_builddir)/libpldmresponder/libpldmresponder_la-bios.o \
-	$(top_builddir)/libpldmresponder/libpldmresponder_la-bios_parser.o \
 	$(top_builddir)/libpldmresponder/libpldmresponder_la-utils.o \
+	$(top_builddir)/libpldmresponder/libpldmresponder_la-bios_table.o \
 	$(top_builddir)/libpldm/libpldm_la-base.o  \
 	$(top_builddir)/libpldm/libpldm_la-bios.o \
+	$(top_builddir)/libpldmresponder/libpldmresponder_la-bios_parser.o \
 	$(CODE_COVERAGE_LIBS) \
 	$(SDBUSPLUS_LIBS)
 libpldmresponder_bios_test_SOURCES = \
@@ -144,6 +146,7 @@ libpldmresponder_bios_table_test_LDADD = \
         $(top_builddir)/libpldmresponder/libpldmresponder_la-utils.o \
         $(top_builddir)/libpldm/libpldm_la-base.o  \
         $(top_builddir)/libpldm/libpldm_la-bios.o \
+		$(top_builddir)/libpldmresponder/libpldmresponder_la-bios_parser.o \
 	$(top_builddir)/pldmd-registration.o \
         $(CODE_COVERAGE_LIBS) \
         $(SDBUSPLUS_LIBS) \
