pldmd: async handlers: add event loop
Add an event loop via sdeventplus, in preparation for enabling handlers
to add in their own IO polls. Add IO on the MCTP demux daemon's socket
to the event loop.

Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: Iced8c5eb1323a9d848da6d6b47446bb43fa3edb7

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,10 +37,12 @@ pldmd_SOURCES = \
 pldmd_LDADD = \
         libpldmresponder/libpldmresponder.la \
         libpldm/libpldm.la \
-	$(SDBUSPLUS_LIBS)
+	$(SDBUSPLUS_LIBS) \
+	$(SDEVENTPLUS_LIBS)
 pldmd_CXXFLAGS = -I$(top_builddir)/libpldm \
 	$(PHOSPHOR_LOGGING_CFLAGS) \
-	$(SDBUSPLUS_CFLAGS)
+	$(SDBUSPLUS_CFLAGS) \
+	$(SDEVENTPLUS_CFLAGS)
 
 if OEM_IBM
 pldmd_CXXFLAGS += \
