--- a/configure.ac
+++ b/configure.ac
@@ -45,6 +45,7 @@ AX_ADD_AM_MACRO_STATIC([])
 AX_PKG_CHECK_MODULES([SDBUSPLUS], [sdbusplus])
 AX_PKG_CHECK_MODULES([PHOSPHOR_LOGGING], [phosphor-logging])
 PKG_CHECK_MODULES([PHOSPHOR_DBUS_INTERFACES], [phosphor-dbus-interfaces])
+PKG_CHECK_MODULES([SDEVENTPLUS], [sdeventplus])
 
 # Check/set gtest specific functions.
 AX_PTHREAD([GTEST_CPPFLAGS="-DGTEST_HAS_PTHREAD=1"],[GTEST_CPPFLAGS="-DGTEST_HAS_PTHREAD=0"])
