libpldm: support GetFruRecordTableMetadata api's
Added encode of request for GetFruRecordTableMetadata
Added encode of response for GetFruRecordTableMetadata
Added decode of response for GetFruRecordTableMetadata

The above encode and decode implementation is based on
PLDM FRU Data Specification DSP0257_1.0.0.

Signed-off-by: Jinu Joy Thomas <jinu.joy.thomas@in.ibm.com>
Change-Id: Ibb16998c58f50538d37f4ea3b324de8277bc5205

--- a/libpldm/meson.build
+++ b/libpldm/meson.build
@@ -4,12 +4,14 @@ headers = [
   'platform.h',
   'bios.h',
   'states.h',
+  'fru.h',
 ]
 
 sources = [
   'base.c',
   'platform.c',
-  'bios.c'
+  'bios.c',
+  'fru.c',
 ]
 
 libpldm_headers = ['.', '..']
