--- a/test/meson.build
+++ b/test/meson.build
@@ -23,7 +23,8 @@ tests = [
   'libpldmresponder_bios_test',
   'libpldmresponder_pdr_state_effecter_test',
   'libpldmresponder_bios_table_test',
-  'libpldmresponder_platform_test'
+  'libpldmresponder_platform_test',
+  'libpldm_fru_test',
 ]
 
 if get_option('oem-ibm').enabled()
