pldmd: async handlers: add API to get event loop
This lets responder handlers add their own IOs to the event loop.

Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: I6525f35339d1149d42e022e04b4c26f40b1b1436

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -26,6 +26,7 @@ test_cxxflags = \
 	$(PTHREAD_CFLAGS) \
 	$(PHOSPHOR_LOGGING_CFLAGS) \
 	$(SDBUSPLUS_CFLAGS) \
+	$(SDEVENTPLUS_CFLAGS) \
 	$(CODE_COVERAGE_CXXFLAGS)
 
 test_ldflags = \
@@ -34,6 +35,7 @@ test_ldflags = \
 	$(PTHREAD_LIBS) \
 	$(SDBUSPLUS_LIBS) \
 	$(PHOSPHOR_LOGGING_LIBS) \
+	$(SDEVENTPLUS_LIBS) \
 	$(OESDK_TESTCASE_FLAGS)
 
 if OEM_IBM
