pldmd: async handlers: add msg send API
Add a daemon API to allow PLDM message handlers to send responses
asynchronously, when they are ready.

To indicate that a response will be sent asynchronously, the handler
will return an empty response message when initially invoked by the pldm
daemon.

Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: I738b39776cf3f24d8b716f991de02d3309cf66df

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,7 +32,8 @@ SUBDIRS = libpldm libpldmresponder test tool
 sbin_PROGRAMS = pldmd
 pldmd_SOURCES = \
     pldmd.cpp \
-    registration.cpp
+    registration.cpp \
+    transport.cpp
 pldmd_LDADD = \
         libpldmresponder/libpldmresponder.la \
         libpldm/libpldm.la \
