oem-ibm: performance: make DMA ops async
Previously, we'd wait for the DMA read/write operations to finish before
responding back in the file IO handlers. Instead, open the xdma fd as
non-blocking, and add the same to an event loop. That way, these
handlers can respond when they're notified of the DMA completing
(asynchronously), and thereby the pldm daemon is free to serve other
commands during this time.

Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: If30e46942b00f53b82697f7e22fa9e48c3ed57ec

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -123,7 +123,9 @@ libpldmoemresponder_fileio_test_LDADD = \
 	$(top_builddir)/libpldm/libpldm_la-base.o \
 	$(top_builddir)/oem/ibm/libpldm/libpldm_la-file_io.o \
 	$(top_builddir)/oem/ibm/libpldmresponder/libpldmresponder_la-file_io.o\
-	$(top_builddir)/oem/ibm/libpldmresponder/libpldmresponder_la-file_table.o
+	$(top_builddir)/oem/ibm/libpldmresponder/libpldmresponder_la-file_table.o \
+	$(top_builddir)/pldmd-transport.o \
+	$(SDEVENTPLUS_LIBS)
 libpldmoemresponder_fileio_test_SOURCES = $(top_builddir)/oem/ibm/test/libpldmresponder_fileio_test.cpp
 endif
 
