--- a/test/meson.build
+++ b/test/meson.build
@@ -40,6 +40,6 @@ foreach t : tests
                      implicit_include_directories: false,
                      link_args: dynamic_linker,
                      build_rpath: get_option('oe-sdk').enabled() ? rpath : '',
-                     dependencies: [libpldm, libpldmresponder, gtest, gmock, dependency('sdbusplus')]),
+                     dependencies: [libpldm, libpldmresponder, gtest, gmock, dependency('sdbusplus'),dependency('phosphor-logging')]),
        workdir: meson.current_source_dir())
 endforeach
